--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "yup": "^1.3.3"
   },
   "scripts": {
-    "start": "set PORT=4444 && react-scripts start",
+    "start": "set PORT=4444 && react-scripts --max_old_space_size=4096 start",
     "build": "react-scripts build --max_old_space_size=4096",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
