--- a/package.json
+++ b/package.json
@@ -65,9 +65,9 @@
     "yup": "^1.3.3"
   },
   "scripts": {
-    "start": "set PORT=4444 && react-scripts --max_old_space_size=8096 start",
-    "build": "react-scripts build --max_old_space_size=8096",
-    "test": "react-scripts test",
+    "start": "set PORT=4444 && node --max-old-space-size=8096 node_modules/react-scripts/scripts/start.js",
+    "build": "node --max-old-space-size=8096 node_modules/react-scripts/scripts/build.js",
+    "test": "node --max-old-space-size=8096 node_modules/react-scripts/scripts/test.js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
